Details
-
Bug
-
Resolution: Fixed
-
Major
-
None
-
Operating System: ReactOS
Platform: x86 Hardware
Description
Created an attachment (id=2079)
test program with source, taken from msdn
When using the file notification api's ReactOS crashes:
(dll\win32\kernel32\process\procsup.c:1362) Creating thread for process (EntryPoint = 0x004011BA)
Assertion 'HandleTable->HandleCount == 0' failed at ntoskrnl\ob\obhandle.c line 2065
-
-
- Fatal System Error: 0x0000001e
(0x80000003,0x80897112,0x9F131C08,0x00000000)
- Fatal System Error: 0x0000001e
-