[FASTFAT] Properly handle directories when notifying the kernel about creation.

This makes the MS test application fully passing on ReactOS.
You can find it at: http://msdn.microsoft.com/en-us/library/windows/desktop/aa365261%28v=vs.85%29.aspx

CORE-2582

svn path=/trunk/; revision=62446